# azure-guest-attestation-sdk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml
crates/azure-guest-attestation-sdk/: Cargo.toml  README.md
crates/azure-guest-attestation-sdk/src/: client.rs  error.rs  guest_attest.rs  lib.rs  parse.rs  report.rs
crates/azure-guest-attestation-sdk/src/guest_attest/: mod.rs  provider.rs
crates/azure-guest-attestation-sdk/src/tee_report/: fmspc_resolver.rs  mod.rs  snp.rs  td_quote.rs  tdx.rs  vbs.rs
crates/azure-guest-attestation-sdk/src/tpm/: attestation.rs  commands.rs  event_log.rs  helpers.rs  mod.rs  types.rs
crates/azure-guest-attestation-sdk/tests/: integration.rs
crates/azure-tpm/: Cargo.toml
crates/azure-tpm-testkit/: Cargo.toml
crates/azure-tpm-testkit/src/: lib.rs
crates/azure-tpm/src/: commands.rs  device.rs  error.rs  event_log.rs  helpers.rs  lib.rs  types.rs
extensions/azure-guest-attest-web/: README.md  deploy.ps1  deploy.sh  diagnose.ps1  diagnose.sh
extensions/azure-guest-attest-web/linux/: install.sh
extensions/azure-guest-attest-web/windows/: install.ps1
rust-core/: Cargo.toml  README.md  cbindgen.toml
rust-core/include/: azure_cvm_attestation.h
rust-core/src/: lib.rs
scripts/: README.md  coverage.ps1  setup.sh
tools/azure-guest-attest-web/src/: main.rs
tools/azure-guest-attest-web/static/: api-docs.html  app.js
tools/azure-guest-attest/src/: main.rs
