[workspace]
resolver = "2"
members = [
    "crates/azure-guest-attestation-sdk",
    "crates/azure-tpm",
    "tools/azure-guest-attest",
    "tools/azure-guest-attest-web",
    "tools/azure-tpm-tool",
]

# The reference-TPM test harness is deliberately NOT a workspace member: it
# depends on the heavy git-sourced `ms-tpm-20-ref` (vendored OpenSSL, needs
# Perl + a C toolchain). Keeping it out of the default member set means
# `cargo build/clippy/test --workspace` never pulls it. It is compiled only
# as a `--cfg vtpm_tests` dev-dependency of `azure-tpm` / the SDK.
exclude = [
    "crates/azure-tpm-testkit",
]

# ---------------------------------------------------------------------------
# Test profile required by injectorpp (runtime function mocking).
# opt-level = 0 prevents inlining so binary patching targets the right symbols.
# codegen-units = 1 avoids duplicate symbol addresses across compilation units.
# ---------------------------------------------------------------------------
[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 1
incremental = false

# Shared workspace metadata
[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Azure/azure-guest-attestation-sdk"
authors = ["Microsoft Azure"]
rust-version = "1.94"

# Shared dependencies - members can use `workspace = true`
[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
sha1 = "0.10"
digest = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

# Crypto
aes-gcm = { version = "0.10", features = ["aes"] }
rand = { version = "0.9", features = ["std"] }

# HTTP - rustls-tls (no OpenSSL) with blocking + json support
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

# Windows
windows-sys = { version = "0.61", features = ["Win32_System_Registry", "Win32_Foundation"] }

# Internal crates
azure-guest-attestation-sdk = { path = "crates/azure-guest-attestation-sdk" }
azure-tpm = { path = "crates/azure-tpm" }

# ---------------------------------------------------------------------------
# Shared lints. Declares the custom `vtpm_tests` cfg (set via
# RUSTFLAGS="--cfg vtpm_tests") so the `unexpected_cfgs` lint does not fire
# under CI's `-Dwarnings`. Opt in per-crate with `[lints] workspace = true`.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(vtpm_tests)'] }