[package]
name = "azure-guest-attestation-sdk"
version = "0.1.0"
description = "Azure Guest Attestation SDK - TPM 2.0 and TEE attestation for CVM and TrustedLaunch VMs"
documentation = "https://docs.rs/azure-guest-attestation-sdk"
readme = "README.md"
keywords = ["azure", "attestation", "tpm", "confidential-computing", "tee"]
categories = ["cryptography", "hardware-support", "api-bindings"]

# Inherit from workspace
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "azure_guest_attestation_sdk"

[dependencies]
azure-tpm = { path = "../azure-tpm", version = "0.1.0" }
bitfield-struct = "0.6"

# Workspace dependencies
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2.workspace = true
sha1.workspace = true
digest.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aes-gcm.workspace = true

# Use local reqwest spec to avoid workspace conflict
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[lints]
workspace = true

[dev-dependencies]
num-bigint = "0.4"
injectorpp = "0.5.0"

# Reference-TPM test harness. Gated behind `--cfg vtpm_tests` so the heavy
# git-sourced `ms-tpm-20-ref` (vendored OpenSSL) never enters the default
# build/test graph. Enable with: RUSTFLAGS="--cfg vtpm_tests".
[target.'cfg(vtpm_tests)'.dev-dependencies]
azure-tpm-testkit = { path = "../azure-tpm-testkit" }
