[package]
name = "azure-tpm"
version = "0.1.0"
description = "Platform-agnostic TPM 2.0 command interface for Azure guest VMs"
documentation = "https://docs.rs/azure-tpm"
readme = "README.md"
keywords = ["tpm", "tpm2", "attestation", "azure", "confidential-computing"]
categories = ["cryptography", "hardware-support"]

# Inherit from workspace
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "azure_tpm"

[dependencies]
bitfield-struct = "0.6"

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha1.workspace = true
digest.workspace = true
hex.workspace = true
tracing.workspace = true
rand.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys.workspace = true

[lints]
workspace = true

[dev-dependencies]

# Reference-TPM harness for this crate's own tests. Gated behind
# `--cfg vtpm_tests` so the heavy git-sourced `ms-tpm-20-ref` (vendored
# OpenSSL, needs Perl + a C toolchain) never enters the default build/test
# graph and is stripped from the published crate. Enable with:
# RUSTFLAGS="--cfg vtpm_tests". Downstream crates use `azure-tpm-testkit`
# instead (a dev-dependency cycle prevents this crate from using it).
[target.'cfg(vtpm_tests)'.dev-dependencies]
ms-tpm-20-ref = { git = "https://github.com/microsoft/ms-tpm-20-ref-rs", features = ["vendored"] }
getrandom = { version = "0.2" }
